--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "mrdtfr",
-    "description": "mrdtfr",
+    "name": "m00",
+    "description": "m00",
     "keywords": ["vmess vless trojan shadowsocks socks"],
     "env": {
         "AA": {
